# sentinel-

./: .gitignore  Additional skills, tools.md  AuditRegistry.sol  CLAUDE.md  IZKMLVerifier.sol  LEARNING_JOURNEY.md  ONBOARDING.md  QWEN.md  README.md  SENTINEL-SPEC.md  SENTINEL_ACTIVE_IMPROVEMENT_LEDGER_UPDATED_2026-04-28.md  SentinelToken.sol  check_status.sh  check_verify.sh  create_cache.py  pyproject.toml  pyrightconfig.json  status.sh  submit_audit.sh  test  test.cu
agents/: AGENTS_STATE_AND_REDESIGN_2026-06-14.md  DIAGRAM.md  DIAGRAM.mmd  README.md  pyproject.toml
agents/configs/: reliability_justifications.yaml  reliability_v1.yaml  reliability_v2.yaml  reliability_v3.yaml  verdicts_default.yaml
agents/scripts/: README.md  audit_gt_labels.py  audit_labels.py  build_reliability_matrix.py  eval_benchmark.py  run_real_audit.py  smoke_audit_mcp.py  smoke_inference_mcp.py  smoke_langgraph.py  smoke_rag_mcp.py  test_k_cap.py
agents/test_audit_reports/: 01_approve_frontrun_report.json  01_batch_payout_swallow_report.json  01_cei_violation_erc721_report.json  01_checks_effects_interactions_report.json  01_erc20_underflow_report.json  01_flash_loan_oracle_manipulation_report.json  01_massive_storage_loop_report.json  01_multi_asset_transfer_report.json  01_proxy_delegatecall_report.json  01_unbounded_refund_report.json  01_vesting_schedule_report.json  06_tricky_call_in_fallback_report.json  06_tricky_dos_in_constructor_report.json  06_tricky_overflow_in_interest_rate_report.json  06_tricky_reentrancy_in_modifier_report.json  06_tricky_timestamp_in_pricing_report.json  07_multivuln_call_reentrancy_report.json  07_multivuln_externalbug_mishandled_report.json  07_multivuln_reentrancy_tod_report.json  ANALYSIS_SUMMARY.md  integer_overflow_report.json  phishable_access_control_report.json  roulette_timestamp_report.json  safe_storage_report.json  vulnerable_reentrant_report.json
agents/test_audit_reports_p0/: 01_approve_frontrun_report.json  01_batch_payout_swallow_report.json  01_cei_violation_erc721_report.json  01_checks_effects_interactions_report.json  01_erc20_underflow_report.json  01_proxy_delegatecall_report.json  01_unbounded_refund_report.json  02_access_control_bypass_report.json  02_auction_deadline_report.json  02_liquidation_ignore_report.json  02_pull_over_push_payment_report.json  02_push_payment_failure_report.json  02_unchecked_auction_bid_report.json  03_low_level_forwarder_report.json  03_mev_arbitrage_report.json  03_nested_dynamic_array_report.json  04_nested_call_chain_report.json  04_pausable_circuit_breaker_report.json  04_sig_replay_attack_report.json  04_storage_growth_dos_report.json  04_withdrawal_fails_silent_report.json  05_batch_transfer_wrapping_report.json  05_dutch_auction_race_report.json  05_emergency_stop_controlled_report.json  05_eth_bank_multi_withdraw_report.json  05_logic_contract_selfdestruct_report.json  05_wrapped_eth_deposit_report.json  06_tricky_call_in_fallback_report.json  06_tricky_dos_in_constructor_report.json  06_tricky_gas_in_loop_condition_report.json  06_tricky_mishandled_internal_chain_report.json  06_tricky_overflow_in_interest_rate_report.json  06_tricky_reentrancy_in_modifier_report.json  07_multivuln_call_reentrancy_report.json  07_multivuln_dos_exception_report.json  07_multivuln_externalbug_mishandled_report.json  07_multivuln_timestamp_call_report.json  09_bccc_tod_injected_approve_report.json  10_bccc_weakaccess_injected_ownable_report.json
agents/test_audit_reports_p0_BROKEN_ADERYN/: 01_bccc_reentrancy_injected_erc20_report.json  01_flash_loan_oracle_manipulation_report.json  01_massive_storage_loop_report.json  01_multi_asset_transfer_report.json  01_vesting_schedule_report.json  02_bccc_dos_injected_loop_report.json  02_calldata_expansion_dos_report.json  02_cross_function_reentrancy_report.json  02_delegatecall_muted_report.json  02_dynamic_dispatch_report.json  02_mempool_sniping_report.json  03_bccc_calltounknown_injected_delegate_report.json  03_delegatecall_injection_report.json  03_dynamic_loop_gas_bomb_report.json  03_failed_batch_approve_report.json  03_multi_call_hub_report.json  03_openzeppelin_managed_report.json  03_randomness_seed_report.json  03_read_only_reentrancy_report.json  03_safe_math_bypass_report.json  04_bccc_gas_injected_nested_report.json  04_erc777_callback_reentrancy_report.json  04_ico_phase_gate_report.json  04_opaque_contract_factory_report.json  04_permit_sig_frontrun_report.json  04_time_calc_overflow_report.json  04_transfer_stipend_exhaustion_report.json  05_approval_race_swallow_report.json  05_bccc_externalbug_injected_flashloan_report.json  05_staticcall_gas_bomb_report.json  05_time_lock_governance_report.json  05_unexpected_revert_dos_report.json  05_upgrade_proxy_selfdestruct_report.json  06_bccc_timestamp_injected_vesting_report.json  06_tricky_externalbug_callback_chain_report.json  06_tricky_timestamp_in_pricing_report.json  06_tricky_tod_mempool_sniping_report.json  06_tricky_unused_return_in_callchain_report.json  07_bccc_mishandled_injected_multicall_report.json  07_multivuln_overflow_unused_return_report.json  (+4 more)
agents/test_audit_reports_post_aderyn_fix/: 01_approve_frontrun_report.json  01_batch_payout_swallow_report.json  01_bccc_reentrancy_injected_erc20_report.json  01_cei_violation_erc721_report.json  01_checks_effects_interactions_report.json  01_erc20_underflow_report.json  01_flash_loan_oracle_manipulation_report.json  01_massive_storage_loop_report.json  01_multi_asset_transfer_report.json  01_proxy_delegatecall_report.json  01_unbounded_refund_report.json  01_vesting_schedule_report.json  02_access_control_bypass_report.json  02_auction_deadline_report.json  02_bccc_dos_injected_loop_report.json  02_calldata_expansion_dos_report.json  02_cross_function_reentrancy_report.json  (+66 more)
data_module/: .gitignore  2026-06-13_DATA_MODULE_AUDIT_v2_45pct_leakage_finding.md  README.md  config.yaml  pyproject.toml
ml/: CLAUDE.md  DIAGRAMS.md  MLOPS_STATE_AND_REDESIGN_2026-06-14.md  README.md  checkpoints.dvc  locked_files.sha256  mlops_config.json  pyproject.toml
(+2891 files in other folders)
