[tool.poetry]
name = "sentinel-ml"
version = "0.1.0"
description = "Deep Learning Intelligence Core for SENTINEL"
authors = ["Ali Motafegh <ali.rajabi99@ut.ac.ir>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12.1,<3.13"
peft = { git = "https://github.com/huggingface/peft.git" }
# Deep Learning Core
torch = "^2.5.0"
torchvision = "^0.20.0"
torchaudio = "^2.5.0"

# Transformers & NLP
transformers = "^4.45.0"
tokenizers = "^0.20.0"
datasets = "^3.0.0"

# Graph Neural Networks (for Phase 1 Stretch)
torch-geometric = "^2.6.0"

# Data Science
numpy = "^1.26.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"

# Visualization
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

# MLOps
mlflow = "^2.17.0"
wandb = "^0.18.0"
tensorboard = "^2.18.0"

# Utilities
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
tqdm = "^4.66.0"

# Jupyter
jupyter = "^1.1.0"
ipykernel = "^6.29.0"
ipywidgets = "^8.1.0"
unzip = "^1.0.0"
pyarrow = ">=4.0.0,<23"
joblib = "^1.5.3"
polars = "^1.38.1"
py-solc-ast = "^1.2.10"
solc = "^0.0.0a0"
solc-select = "^1.2.0"
dvc = "^3.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
